[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "UPD"
version = "1.0.0"
description = "Unsolvable Problem Detection"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.1.0", "torchvision==0.16.0",
    "transformers==4.37.2", "tokenizers==0.15.1", "sentencepiece==0.1.99", "shortuuid",
    "datasets==2.18.0", "accelerate==0.21.0", "peft", "bitsandbytes",
    "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
    "gradio==4.16.0", "gradio_client==0.8.1",
    "requests", "httpx==0.24.0", "uvicorn", "fastapi",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
    "openpyxl", "xformers==0.0.22.post7",
    "transformers_stream_generator",
    "openai==1.3.7",
    "google.generativeai==0.3.2",
    "jieba", "mmengine-lite",
    "tiktoken"
]

[project.optional-dependencies]
train = ["deepspeed==0.12.6", "ninja", "wandb"]
build = ["build", "twine"]

[tool.setuptools.packages.find]
exclude = ["fig*", "dist*", "data*", "scripts*", "output*"]

[tool.wheel]
exclude = ["fig*", "dist*", "data*", "scripts*", "output*"]